# NeowiseGameEngine

./: .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  Include.cmake  NW.sln  SetupDevenv.bat  plan.txt
Application/: Application.vcxproj  Application.vcxproj.filters
Application/Source/Launch/: LinuxMain.cpp  WinMain.cpp
Engine/: Engine.vcxproj  Engine.vcxproj.filters  cpp.hint
Engine/Public/Base/: Algorithms.h  Allocators.h  ArrayView.h  Assert.h  CRC.h  Clock.h  Common.h  Diagnostics.h  Export.h  Hash.h  Hashtable.h  IOBase.h  MD5.h  MacroUtils.h  MemoryUtilities.h  NumericTypes.h  Optional.h  PolicyAllocator.h  Ref.h  Scope.h  StaticVector.h  String.h  StringUtils.h  StringView.h  Templated.h  Thread.h  UUID.h  Utilities.h  Vector.h
Engine/Public/Engine/: Application.h  BaseWindow.h  EngineBoot.h  EngineLoop.h  GameRuntimeApplication.h  SplashScreen.h
Engine/Public/Input/: InputDevice.h  InputSystem.h  Keycode.h
Engine/Public/Launch/: SecureMain.h
Engine/Public/Math/: Functions.h  Half.h  Math.h  Matrix3.h  Matrix4.h  Packed.h  Point.h  Projection.h  Quaternion.h  Scalar.h  Setup.h  Vector2.h  Vector3.h  Vector4.h
Engine/Public/Platform/: PlatformConsole.h  PlatformKeyboard.h  PlatformMemory.h  PlatformSystemClock.h  PlatformThread.h  PlatformWindow.h
Engine/Source/Base/: Allocators.cpp  BuildVersion.cpp  CRC.cpp  Diagnostics.cpp  Hash.cpp  MD5.cpp  MemoryUtilities.cpp  String.cpp  StringUtils.cpp  StringView.cpp  Thread.cpp  TimePoint.cpp  UUID.cpp
Engine/Source/Engine/: Application.cpp  BaseWindow.cpp  (+4 more)
Scripts/Linux/: GetRequiredTools.sh
Scripts/Windows/: GetRequiredVisualStudioBuildTools.bat
Source/: .clangd  CMakeLists.txt  Include.cmake
Source/Application/Private/Launch/: WinMain.cpp
Source/Engine/: DataTypes.natvis
Source/Engine/Private/Base/: Allocators.cpp  BuildVersion.cpp  CRC.cpp  Diagnostics.cpp  DynamicLibrary.cpp  Hash.cpp  MD5.cpp  MemoryUtilities.cpp  String.cpp  StringUtils.cpp  StringView.cpp  Thread.cpp  TimePoint.cpp  UUID.cpp
Source/Engine/Private/Base/Memory/: AllocatorPolicyBase.cpp  FixedHeapAllocatorPolicy.cpp
Source/Engine/Private/Engine/: Application.cpp  BaseWindow.cpp  EngineBoot.cpp  EngineGlobals.cpp  EngineLoop.cpp  GameRuntimeApplication.cpp  RenderThread.cpp
Source/Engine/Private/Engine/Events/: Bus.cpp  EngineEvents.cpp
Source/Engine/Private/Engine/RHI/: RHI.cpp
Source/Engine/Private/Engine/VulkanRHI/: Common.cpp  DynamicProvider.cpp  VulkanAdapter.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp
Source/Engine/Private/Input/: InputDevice.cpp  InputSystem.cpp  KeyboardInputDevice.cpp  Keycode.cpp  MouseInputDevice.cpp
Source/Engine/Private/Launch/: SecureMain.cpp
Source/Engine/Private/Math/: Half.cpp  Matrix3.cpp  Matrix4.cpp  MatrixFunctions.cpp  Packed.cpp  Projection.cpp  Quaternion.cpp  Scalar.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  VectorFunctions.cpp
Source/Engine/Private/Platform/Linux/: LinuxBase.cpp  LinuxPlatformAssert.cpp  LinuxPlatformConsole.cpp  LinuxPlatformDynamicLibrary.cpp  LinuxPlatformKeyboard.cpp  LinuxPlatformMemory.cpp  LinuxPlatformMutexLock.cpp  LinuxPlatformSystemClock.cpp  LinuxPlatformThread.cpp  LinuxPlatformWindow.cpp  LinuxVulkanExtensions.cpp
Source/Engine/Private/Platform/Null/: NullPlatformConsole.cpp  NullPlatformKeyboard.cpp  NullPlatformMemory.cpp  NullPlatformSystemClock.cpp  NullPlatformWindow.cpp
Source/Engine/Private/Platform/Windows/: WindowsBase.cpp  WindowsPlatformAssert.cpp  WindowsPlatformConsole.cpp  WindowsPlatformDynamicLibrary.cpp  WindowsPlatformFilesystem.cpp  WindowsPlatformKeyboard.cpp  WindowsPlatformMemory.cpp  WindowsPlatformMutexLock.cpp  WindowsPlatformSystemClock.cpp  WindowsPlatformThread.cpp  WindowsPlatformWindow.cpp  WindowsVulkanExtensions.cpp
Source/Engine/Public/Base/: Algorithms.h  Allocators.h  ArrayView.h  Assert.h  BuildVersion.h  CRC.h  Clock.h  Common.h  CycledBuffer.h  Diagnostics.h  DynamicLibrary.h  Hash.h  Hashset.h  Hashtable.h  IOBase.h  MD5.h  MacroUtils.h  MemoryUtilities.h  Mutex.h  NumericTypes.h  Optional.h  PolicyAllocator.h  Ref.h  Scope.h  StaticVector.h  String.h  StringUtils.h  StringView.h  Templated.h  Thread.h  TimePoint.h  UUID.h  Utilities.h  Vector.h  Wrap.h
Source/Engine/Public/Base/Memory/: AllocatorPolicyBase.h  FixedHeapAllocatorPolicy.h  FixedStackAllocatorPolicy.h
Source/Engine/Public/Engine/: Application.h  BaseWindow.h  EngineBoot.h  EngineEvents.h  EngineGlobals.h  EngineLoop.h  GameRuntimeApplication.h  RenderThread.h  SplashScreen.h
Source/Engine/Public/Engine/Events/: Bus.h  Event.h
Source/Engine/Public/Engine/RHI/: Common.h  RHI.h  RHIAdapter.h  RHICommandRecorder.h  RHISurface.h  RHISwapchain.h
Source/Engine/Public/Engine/VulkanRHI/: Common.h  DynamicProvider.h  VulkanAdapter.h  VulkanSurface.h  VulkanSwapchain.h
Source/Engine/Public/Engine/VulkanRHI/API/: vk_platform.h  vulkan_core.h
Source/Engine/Public/Input/: InputDevice.h  InputSystem.h  Keycode.h
Source/Engine/Public/Launch/: SecureMain.h
Source/Engine/Public/Math/: Functions.h  Half.h  Math.h  Matrix3.h  Matrix4.h  Packed.h  Point.h  Projection.h  Quaternion.h  Scalar.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
Source/Engine/Public/Platform/: PlatformConsole.h  PlatformDynamicLibrary.h  PlatformKeyboard.h  PlatformMemory.h  PlatformSystemClock.h  PlatformThread.h  PlatformWindow.h
Source/Engine/Public/Platform/Linux/: LinuxBase.h  LinuxPlatformConsole.h  LinuxPlatformDynamicLibrary.h  LinuxPlatformKeyboard.h  LinuxPlatformMemory.h  LinuxPlatformSystemClock.h  LinuxPlatformThread.h  LinuxPlatformWindow.h
Source/Engine/Public/Platform/Null/: NullPlatformConsole.h  NullPlatformDynamicLibrary.h  NullPlatformKeyboard.h  NullPlatformMemory.h  NullPlatformSystemClock.h  NullPlatformThread.h  NullPlatformWindow.h
Source/Engine/Public/Platform/Windows/: WindowsBase.h  WindowsPlatformConsole.h  WindowsPlatformDynamicLibrary.h  WindowsPlatformFilesystem.h  WindowsPlatformKeyboard.h  WindowsPlatformMemory.h  WindowsPlatformSystemClock.h  WindowsPlatformThread.h  WindowsPlatformWindow.h
(+64 files in other folders)
